Fix [pb alignements champs de formulaire] - Corrections graphiques moteur à facettes et champs liés - Correction d'une variable d'inclusion oubliée

--- a/framework/scss/components/_forms.scss
+++ b/framework/scss/components/_forms.scss
@@ -243,7 +243,6 @@ input[type=radio],
 
 .ds44-labelStd {
      font-size: 1.4rem;
-     line-height: 1rem;
 }
 
 .ds44-labelLarge {
